--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <module>core</module>
     <module>service</module>
     <module>webapp</module>
+      <module>Gerard</module>
   </modules>
 
   <name>parent-project</name>
